<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>text-processing-libraries-modules</artifactId>
    <packaging>pom</packaging>
    <name>text-processing-libraries-modules</name>

    <parent>
        <artifactId>parent-modules</artifactId>
        <groupId>com.baeldung</groupId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <modules>
        <module>antlr</module>
        <module>apache-tika</module>
        <module>asciidoctor</module>
        <module>pdf</module>
        <module>pdf-2</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>